--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,7 @@
   --background-yellow: #F7E296;
   --special-green: #91C92F;
   --buttons-yellow-dark: #F0C52E;
+  --background-input-form: #F2F2F2;
 }
 
 /* Global */
@@ -56,7 +57,7 @@ img {
 
 .main-navigation {
   font-size: 15px;
-  line-height: auto;
+  line-height: 20px;
   color: inherit;
 }
 
@@ -66,6 +67,8 @@ img {
   font-size: 15px;
   line-height: 20px;
   list-style: none;
+  padding: 0;
+  margin: 0;
 }
 
 .header-site-navigation a {
@@ -80,27 +83,90 @@ img {
   color: inherit;
 }
 
-.main-menu .catalog,
-.main-menu .delivery,
-.main-menu .warranty,
-.main-menu .contacts {
+.main-menu-list {
+  font-family: "Gilroy", "Arial", sans-serif;
+  font-size: 18px;
+  line-height: 22px;
+  padding: 0;
+  margin: 0;
+}
+
+.catalog,
+.delivery,
+.warranty,
+.contacts {
   text-transform: uppercase;
   list-style: none;
 }
 
-.catalog-list a {
-  text-decoration: none;
+.catalog:hover,
+.catalog:focus {
+  opacity: 0.6;
+}
+
+.catalog:active {
+  opacity: 0.3;
+}
+
+.delivery:hover,
+.delivery:focus {
+  opacity: 0.6;
+}
+
+.delivery:active {
+  opacity: 0.3;
+}
+
+.warranty:hover,
+.warranty:focus {
+  opacity: 0.6;
+}
+
+.warranty:active {
+  opacity: 0.3;
+}
+
+.contacts:hover,
+.contacts:focus {
+  opacity: 0.6;
+}
+
+.contacts:active {
+  opacity: 0.3;
+}
+
+.catalog-list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
 }
 
 .catalog-item {
-  font-family: "Open Sans", sans-serif;
+  font-family: "Open Sans", "Arial", sans-serif;
   font-weight: 300;
   font-size: 15px;
   line-height: 20px;
-  color: inherit;
+  text-decoration: none;
+  text-transform: none;
 }
 
+.catalog-item:hover,
+.catalog-item:focus {
+  opacity: 0.6;
+}
+
+.catalog-item:active {
+  opacity: 0.3;
+}
+
+
 /* Slider */
+
+.slider-list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
 
 .topic {
   font-size: 47px;
@@ -112,10 +178,7 @@ img {
   font-weight: 300;
   font-size: 15px;
   line-height: 20px;
-
 }
-
-
 
 .feature {
   font-family: "Gilroy", "Arial", sans-serif;
@@ -133,24 +196,39 @@ img {
   line-height: 15px;
 }
 
+.category-list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
 
-.category-list a {
+.category-item {
+  font-family: "Gilroy", "Arial", sans-serif;
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 22px;
   color: inherit;
   text-decoration: none;
-
+  letter-spacing: 0.05em;
 }
 
 /* Service */
 
+.service {
+  background-color: var(--background-grey-light);
+}
+
+.service-list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
 
 .service-head {
   font-size: 47px;
   line-height: 58px;
   letter-spacing: 0.2em;
-
 }
-
-
 
 .service-info {
   font-family: "Open Sans", "Arial", sans-serif;
@@ -165,35 +243,32 @@ img {
 
 .brands {
   list-style: none;
-
+  padding: 0;
+  margin: 0;
 }
 
-
+/* .......... */
 
 .about-us-head,
-.contacts-head{
+.write-us-head {
   font-size: 47px;
-line-height: 58px;
-letter-spacing: 0.2em;
+  line-height: 58px;
+  letter-spacing: 0.2em;
 }
 
 .about-us-info,
-.contacts-info{
-font-family: "Open Sans", "Arial", sans-serif;
-font-weight: 300;
-font-size: 15px;
-line-height: 28px;
-
+.write-us-info {
+  font-family: "Open Sans", "Arial", sans-serif;
+  font-weight: 300;
+  font-size: 15px;
+  line-height: 28px;
+  text-transform: none;
 }
 
-.transport-company{
+.transport-company {
   font-size: 16px;
-line-height: 28px;
+  line-height: 28px;
 }
-
-
-
-
 
 
 /* Button */
@@ -207,19 +282,40 @@ line-height: 28px;
   color: inherit;
   vertical-align: top;
   text-transform: uppercase;
-  background-color: var(--buttons-yellow-dark);
   border: none;
   letter-spacing: 0.2em;
+  width: 220px;
+}
+
+.button-narrow {
+  width: 160px;
+}
+
+.button-wide {
+  width: 260px;
+}
+
+.button-send {
+  width: 200px;
 }
 
 .button:hover,
-.button:focus,
+.button:focus {
+  opacity: 0.6;
+}
+
 .button:active {
-  background-color: var(--special);
   opacity: 0.3;
 }
 
-
+.search-button {
+  font-family: "Open Sans", "Arial", sans-serif;
+  font-weight: 300;
+  color: var(--basic-black);
+  font-size: 15px;
+  line-height: 20px;
+  text-transform: uppercase;
+}
 
 
 /* Main footer */
@@ -227,27 +323,159 @@ line-height: 28px;
 .main-footer {
   color: var(--basic-white);
   background-color: var(--footer-background-dark);
-
 }
 
 .main-footer a {
   color: var(--basic-white);
   text-decoration: none;
-
+  list-style: none;
 }
 
+.footer-site-navigation {
+  font-family: "Open Sans", "Arial", sans-serif;
+  font-weight: 300;
+  font-size: 15px;
+  line-height: 20px;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.footer-site-navigation a {
+  opacity: 0.7;
+}
+
+.footer-login-link:hover,
+.footer-login-link:focus {
+  opacity: 1;
+}
+
+.footer-login-link:active {
+  opacity: 0.3;
+}
+
+.footer-compare-link:hover,
+.footer-compare-link:focus {
+  opacity: 1;
+}
+
+.footer-compare-link:active {
+  opacity: 0.3;
+}
+
+.footer-cart-link:hover,
+.footer-cart-link:focus {
+  opacity: 1;
+}
+
+.footer-cart-link:active {
+  opacity: 0.3;
+}
+
+.footer-adress {
+  font-family: "Open Sans", "Arial", sans-serif;
+  font-weight: 300;
+  font-size: 15px;
+  line-height: 20px;
+}
 
 .footer-menu {
+  font-family: "Gilroy", "Arial", sans-serif;
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 22px;
+  letter-spacing: 0.2em;
   text-transform: uppercase;
 }
 
+.footer-menu-list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
 
+.footer-social-list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.footer-delivery:hover,
+.footer-delivery:focus {
+  opacity: 0.6;
+}
+
+.footer-delivery:active {
+  opacity: 0.3;
+}
+
+.footer-warranty:hover,
+.footer-warranty:focus {
+  opacity: 0.6;
+}
+
+.footer-warranty:active {
+  opacity: 0.3;
+}
+
+.footer-contacts:hover,
+.footer-contacts:focus {
+  opacity: 0.6;
+}
+
+.footer-contacts:active {
+  opacity: 0.3;
+}
+
+.social-button {
+  opacity: 0.3;
+}
+
+.social-button:hover,
+.social-button:focus {
+  opacity: 0.6;
+}
+
+.social-button:active {
+  opacity: 0.1;
+}
 
 /* Contacts */
 
 .contacts-phone {
   font-family: "Open Sans", "Arial", sans-serif;
+  font-weight: 300;
   font-size: 15px;
   line-height: 20px;
-  color: inherit;
+}
+
+/* Modal */
+
+.modal {
+  color: var(--basic-black);
+}
+
+.name,
+.email,
+.text {
+  font-family: "Gilroy", "Arial", sans-serif;
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 22px;
+  color: var(--basic-black)
+}
+
+.input-name,
+.input-email,
+.input-letter {
+  font-family: "Open Sans", "Arial", sans-serif;
+  font-weight: 400;
+  opacity: 0.4;
+  font-size: 14px;
+  line-height: 19px;
+}
+
+.input-name input[type="text"],
+.input-email input[type="email"] {
+  background-color: var(--background-input-form);
 }
